--- a/html/index.html
+++ b/html/index.html
@@ -86,7 +86,7 @@
 							<li><a href="#tab5" data-toggle="tab">Analyze</a></li>
 						</ul>
 						<form 
-							action="/cgi-bin/monophylizer.pl" 
+							action="http://monophylizer.naturalis.nl/cgi-bin/monophylizer.pl" 
 							method="POST" 
 							enctype="multipart/form-data">
 							
@@ -104,7 +104,7 @@
 											<!--input type="file" name="infile" /-->											
 											<div class="fileinput fileinput-new input-group" data-provides="fileinput">
 											  <div class="form-control" data-trigger="fileinput"><i class="glyphicon glyphicon-file fileinput-exists"></i> <span class="fileinput-filename"></span></div>
-											  <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select file</span><span class="fileinput-exists">Change</span><input type="file" name="..."></span>
+											  <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select file</span><span class="fileinput-exists">Change</span><input type="file" name="infile"></span>
 											  <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
 											</div>
 
