--- a/html/index.html
+++ b/html/index.html
@@ -90,7 +90,7 @@
 							<li><a href="#tab4" data-toggle="tab">Analyze!</a></li>
 						</ul>
 						<form 
-							action="http://monophylizer.naturalis.nl/cgi-bin/monophylizer.pl" 
+							action="/cgi-bin/monophylizer.pl" 
 							method="POST" 
 							enctype="multipart/form-data">
 							
