--- a/html/index.html
+++ b/html/index.html
@@ -528,6 +528,148 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>FAQ</h1>
+                    <dl>
+                    	<dt>How does the program determine what's para- or polyphyletic?</dt>
+                    	<dd>
+                    		The steps of the algorithm are described in the manuscript
+                    		(see: 'How to cite') of which this service is a part. In short:
+                    		<ol>
+                    			<li>Extract all distinct taxon names from the tree</li>
+                    			<li>Label all interior nodes with a pre- and a post-order
+                    			index.</li>
+                    			<li>For each taxon:
+                    			<ol type="i"> 
+                    				<li>Collect all tips that belong to it</li>
+                    				<li>Find the MRCA for the collected tips</li>
+                    				<li>Collect all descendants of the MRCA. If 
+                    				this set is identical to the set of step 
+                    				<code>i.</code> then the taxon is monophyletic
+                    				and the analysis moves on to the next taxon.</li>
+                    				<li>Collect all that subtend tips from the focal 
+                    				taxon as well as at least one other taxon and 
+                    				sort these their post-order index.</li>
+                    				<li>Group the collected, sorted nodes 
+                    				into distinct root-to-tip paths. Internal nodes 
+                    				that are nested in each other are identified 
+                    				(and collected in the same group) by checking that 
+                    				the pre-order index of the focal node is larger, 
+                    				and the post-order index of the focal node is smaller 
+                    				than that of the next node. If there is more than 
+                    				one distinct root-to-tip path (i.e., group), the 
+                    				taxon is considered polyphyletic, otherwise 
+                    				paraphyletic.</li>
+                    				<li>For each first (i.e. most recent) node in each 
+                    				group, collect all subtended species. The union of 
+                    				these sets across groups forms the set of entangled 
+                    				species.</li>
+                    			</ol>
+                    			</li>
+                    		</ol>
+                    	</dd>
+                    	<dt>How do I interpret the results?</dt>
+                    	<dd>
+                    		The output of the algorithm is presented in tabular form. Each row
+                    		represent one taxon from the tree. The 'assessment' column shows
+                    		whether that taxon is mono-, para- or polyphyletic. The 'tanglees'
+                    		column shows with which other taxa, if any, the focal taxon is entangled.
+                    	</dd>
+                    	<dt>How do I export the results?</dt>
+                    	<dd>
+                    		You can copy and paste the results from the browser window into
+                    		a spreadsheet program. Easier still would be to check the 'TSV'
+                    		box in the 'output' tab. The results will then be written as
+                    		tab-separated data that can be imported directly into spreadsheet
+                    		programs, R, etc.
+                    	</dd>
+                    	<dt>How is this algorithm implemented?</dt>
+                    	<dd>
+                    		The algorithm is written in the Perl programming language 
+                    		and uses the 
+                    		<a href="http://search.cpan.org/dist/Bio-Phylo">Bio::Phylo</a>
+                    		libraries to read the input data.
+                    	</dd>
+                    	<dt>Can I use this "off-line"?</dt>
+                    	<dd>
+                    		Yes. You can run <a href="https://raw.githubusercontent.com/naturalis/monophylizer/master/script/monophylizer.pl">the script</a>
+                    		locally. Consult the embedded Perl-Doc documentation in the
+                    		script or run <code>perl monophylizer.pl --help</code> for
+                    		more info.
+                    	</dd>
+                    	<dt>Can I use this through an API?</dt>
+                    	<dd>
+                    		Yes. The data and parameters are uploaded through an 
+                    		<code>HTTP POST</code> request with <code>multipart/form</code> 
+                    		data and the results are in the response, so this
+                    		service functions as a RESTful web service. You will need
+                    		to provide the following parameters:
+                    		<ul>
+                    			<li><code>infile</code>, which is a file upload</li>
+                    			<li><code>format</code>, input file format, one of:
+                    			<code>newick, nexus, nexml, phyloxml</code></li>
+                    			<li><code>separator</code>, the character that separates
+                    			the taxon name from its identifier. Default is |</li>
+                    			<li><code>trinomials</code>, which is an optional argument
+                    			that, when given any value other than '0', indicates that
+                    			subspecific epithets need to be parsed</li>
+                    			<li><code>astsv</code>, which is an optional argument
+                    			that, when given any value other than '0', indicates that
+                    			the output must be written as tab-separated data</li>
+                    			<li><code>metadata</code>, which is an optional file
+                    			upload with additional tab-separated data to join with
+                    			the taxa in the output</li>
+                    		</ul>
+                    	</dd>
+                    	<dt>How is this code licensed?</dt>
+                    	<dd>
+                    		The analysis script proper is licensed under the 
+                    		<a href="https://raw.githubusercontent.com/naturalis/monophylizer/master/LICENSE">Apache License</a>, 
+                    		which is very permissive for most forms of re-use.
+                    	</dd>
+                    	<dt>Who wrote this code?</dt>
+                    	<dd>
+                    		The analysis code was written by 
+                    		<a href="http://rutgervos.blogspot.com">Rutger Vos</a>.
+                    	</dd>
+                    	<dt>Where is this hosted?</dt>
+                    	<dd>
+                    		This service is hosted by <a href="http://www.naturalis.nl">
+                    			Naturalis Biodiversity Center
+                    		</a>.
+                    	</dd>
+                    	<dt>How to cite?</dt>
+                    	<dd>
+                    		This service is part of a publication. If you use this service
+                    		in your research, please cite the publication:
+                    		<blockquote>
+                    		<strong>Mutanen, M.</strong> <em>et al.</em>. 2016. Species-Level 
+                    		Poly- and Paraphyly in DNA barcode Gene Trees: Strong Operational 
+                    		Bias in European Lepidoptera.<em>Systematic Biology</em>
+                    		</blockquote>
+                    	</dd>
+                    	<dt>How to format taxonomic names?</dt>
+                    	<dd>
+                    		Taxonomic names are read without any intelligence:
+                    		the expectation is that names consist of the genus,
+                    		the specific epithet, and, optionally, the subspecific
+                    		epithet, followed by an identifier. Anything else,
+                    		such as 'sp.', 'cv.', and so on are going to cause
+                    		problems and will have to be avoided for this analysis.
+                    	</dd>
+                    	<dt>I am getting error messages?</dt>
+                    	<dd>
+                    		This is almost certainly because your input file is
+                    		somehow syntactically invalid. On the 'upload' tab
+                    		there is a link to extensive documentation, with
+                    		example files, to explain what input file formats
+                    		are accepted. If you can't figure out what's wrong
+                    		with your file, try opening it in 
+                    		<a href="http://mesquiteproject.org">Mesquite</a>
+                    		and exporting it as NEXUS: its intepretation of the
+                    		NEXUS standard is readily understood by this service,
+                    		and Mesquite might give you useful feedback about
+                    		your file.
+                    	</dd>
+                    </dl>
                 </div>
             </div>
         </div>
