--- a/html/index.html
+++ b/html/index.html
@@ -20,15 +20,15 @@
     <link href="css/scrolling-nav.css" rel="stylesheet">
     
     <!-- Wizard CSS -->
-	<link href="css/prettify.css" rel="stylesheet">    
+    <link href="css/prettify.css" rel="stylesheet">    
 	
-	<!-- Widget CSS -->
-	<link href="css/jasny-bootstrap.min.css" rel="stylesheet">
+    <!-- Widget CSS -->
+    <link href="css/jasny-bootstrap.min.css" rel="stylesheet">
 	
-	<style type="text/css">
+    <style type="text/css">
 	.panel { text-align: left; margin-top: 1em }
 	a.glyphicon-info-sign { text-decoration: none }
-	</style>
+    </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -66,9 +66,9 @@
                     <li>
                         <a class="page-scroll" href="#faq">FAQ</a>
                     </li>                                                          
-                    <li>
+                    <!--li>
                         <a class="page-scroll" href="#about">About</a>
-                    </li>
+                    </li-->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -676,7 +676,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about-section">
+    <!--section id="about" class="about-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -684,7 +684,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section-->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
